--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
 @import-normalize; /* bring in normalize.css styles */
 
+:root {
+  --accentColor:violet;
+  --primaryTextColor: #ffffff;
+  --secondaryTextColor: #8775f1;
+  --primaryBackgroundColor: #080c11;
+  --secondaryBackgroundColor: #17263b;
+  --mainDuration: 250ms;
+  --mainTimingFunction: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +27,43 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+li,
+body {
+    margin: 0;
+    padding: 0;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+body {
+  font-family: var(--primaryFont);
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--primary-text-color);
+  background-color: var(--primaryBackgroundColor);
+
+  @media screen and (min-width: 768px) {
+    body {
+      font-size: 20px;
+    }
+    
+}
+}
+
+main {
+  display: block;
+  min-height: 76vh;
+  background-color: var(--primaryBackgroundColor);}
