--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 @import-normalize; /* bring in normalize.css styles */
 
 :root {
-  --accentColor:violet;
+  --accentColor: violet;
   --primaryTextColor: #ffffff;
   --secondaryTextColor: #8775f1;
   --primaryBackgroundColor: #080c11;
   --secondaryBackgroundColor: #17263b;
   --mainDuration: 250ms;
   --mainTimingFunction: cubic-bezier(0.4, 0, 0.2, 1);
-
+  --overlayColor: rgba(0, 0, 0, 0.8);
+  --outlineColor: #008000;
+  --warningColor: #ff4500;
 }
-
 
 *,
 *::before,
@@ -37,14 +38,14 @@ h6,
 ul,
 li,
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 body {
@@ -59,11 +60,11 @@ body {
     body {
       font-size: 20px;
     }
-    
-}
+  }
 }
 
 main {
   display: block;
   min-height: 76vh;
-  background-color: var(--primaryBackgroundColor);}
+  background-color: var(--primaryBackgroundColor);
+}
