--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,17 +1,88 @@
 .navigation {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    min-width: 700px;
+    flex-direction: column;
+    justify-content:center;
+    margin-top: 25px;
+
+
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        margin-top: 0px;
+        }
+
+
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    min-width:700
+    }
 }
 
 .main-menu {
     display: flex;
+    justify-content: center;
+    align-items: center;
     list-style: none;
+    margin-right: 10px;
+
+    @media screen and (min-width: 1200px) {
+        justify-content: flex-start;
+        margin-top: 0;
+
+    }
 }
 
 .auth-menu {
     display: flex;
+    justify-content: center;
     list-style: none;
+    margin-top: 25px;
+
+    @media screen and (min-width: 768px) {
+        justify-content: flex-start;
+        margin-top: 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        justify-content: flex-start;
+        margin-top: 0;
+
+    }
 }
 
+.nav-item {
+    padding: 5px 0px;
+}
+
+.nav-item:not(:first-child) {
+    margin-left: 10px;
+}
+
+.nav-link {
+    padding: 10px 25px;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--accentColor);
+    border: 1px solid var(--accentColor);
+    border-radius: 5px;
+    transition: background-color var(--mainDuration) var(--mainTimingFunction), color var(--mainDuration) var(--mainTimingFunction);
+
+&-active {
+    padding: 10px 25px;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: none;
+    color: var(--secondaryBackgroundColor);
+    background-color: var(--accentColor);
+    border-radius: 5px;
+}
+
+&:hover {
+    color: var(--secondaryTextColor);
+    border: 1px solid var(--accentColor);
+    background-color: var(--accentColor);
+}
+}
